mule-deployments/ingress-service-route-deployment.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myingress  
  annotations:    
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    #nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/rewrite-target: /
spec:  
  tls:
  - hosts:
    - rayfabian-ingress.australiaeast.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: rayfabian-ingress.australiaeast.cloudapp.azure.com
  - http:
      paths:      
      - path: /api/contacts
        backend:
          serviceName: contact-v1
          servicePort: 9083
